Fixing vertical alignment of composers

--- a/css/declaringglory.css
+++ b/css/declaringglory.css
@@ -36,9 +36,9 @@
 
 #artists .composer {
     width: 49%;
-    display: inline-block;
+    float: left;
     box-sizing: border-box;
-    padding: 0 4px;
+    padding: 0 8px;
 }
 
 #artists .title-holder {
